// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncidentAttributes should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1627zcn-1 hxiQJS"
  >
    <div
      class="ant-descriptions"
    >
      <div
        class="ant-descriptions-view"
      >
        <table>
          <tbody>
            <tr
              class="ant-descriptions-row"
            >
              <th
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    Client Impact Count
                  </span>
                </div>
              </th>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <td
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <div
                      class="styledComponents__Row-sc-1627zcn-0 hprNyK"
                    >
                      5 of 27 clients (18.52%)
                    </div>
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <th
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    AP Impact Count
                  </span>
                </div>
              </th>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <td
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <div
                      class="styledComponents__Row-sc-1627zcn-0 hprNyK"
                    >
                      1 of 1 AP (100%)
                    </div>
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <th
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    Incident Category
                  </span>
                </div>
              </th>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <td
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <div
                      class="styledComponents__Row-sc-1627zcn-0"
                    />
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <th
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    Incident Sub-Category
                  </span>
                </div>
              </th>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <td
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <div
                      class="styledComponents__Row-sc-1627zcn-0"
                    />
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <th
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    Type
                  </span>
                </div>
              </th>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <td
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <div
                      class="styledComponents__Row-sc-1627zcn-0"
                      title="Access Point"
                    >
                      Access Point
                    </div>
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <th
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    Scope
                  </span>
                </div>
              </th>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <td
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <div
                      class="styledComponents__Row-sc-1627zcn-0"
                      title="Edu2-611-Mesh (Venue)
> 255_Edu2-611-group (AP Group)
> RuckusAP (70:CA:97:01:A0:C0) (Access Point)"
                    >
                      RuckusAP (70:CA:97:01:A0:C0)
                    </div>
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <th
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    Duration
                  </span>
                </div>
              </th>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <td
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <div
                      class="styledComponents__Row-sc-1627zcn-0"
                      title="21h 27m"
                    >
                      21h 27m
                    </div>
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <th
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    Event Start Time
                  </span>
                </div>
              </th>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <td
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <div
                      class="styledComponents__Row-sc-1627zcn-0"
                      title="Jul 19 2022 13:15"
                    >
                      Jul 19 2022 13:15
                    </div>
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <th
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    Event End Time
                  </span>
                </div>
              </th>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <td
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <div
                      class="styledComponents__Row-sc-1627zcn-0"
                      title="Jul 20 2022 10:42"
                    >
                      Jul 20 2022 10:42
                    </div>
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`impactValues formats impacted ap count 1`] = `
Object {
  "apImpact": 1,
  "apImpactCountFormatted": "1",
  "apImpactDescription": <Memo(MemoizedFormattedMessage)
    defaultMessage={
      Array [
        Object {
          "type": 1,
          "value": "impactedCount",
        },
        Object {
          "type": 0,
          "value": " of ",
        },
        Object {
          "type": 1,
          "value": "count",
        },
        Object {
          "type": 0,
          "value": " ",
        },
        Object {
          "type": 1,
          "value": "type",
        },
        Object {
          "type": 1,
          "value": "isPlural",
        },
        Object {
          "type": 0,
          "value": " (",
        },
        Object {
          "type": 1,
          "value": "impact",
        },
        Object {
          "type": 0,
          "value": ")",
        },
      ]
    }
    id="2PBVN3"
    values={
      Object {
        "count": 1,
        "impact": "100%",
        "impactedCount": 1,
        "isPlural": "",
        "type": "AP",
      }
    }
  />,
  "apImpactFormatted": "100%",
}
`;

exports[`impactValues formats impacted client count 1`] = `
Object {
  "clientImpact": 0.8666666666666667,
  "clientImpactCountFormatted": "1.3 k",
  "clientImpactDescription": <Memo(MemoizedFormattedMessage)
    defaultMessage={
      Array [
        Object {
          "type": 1,
          "value": "impactedCount",
        },
        Object {
          "type": 0,
          "value": " of ",
        },
        Object {
          "type": 1,
          "value": "count",
        },
        Object {
          "type": 0,
          "value": " ",
        },
        Object {
          "type": 1,
          "value": "type",
        },
        Object {
          "type": 1,
          "value": "isPlural",
        },
        Object {
          "type": 0,
          "value": " (",
        },
        Object {
          "type": 1,
          "value": "impact",
        },
        Object {
          "type": 0,
          "value": ")",
        },
      ]
    }
    id="2PBVN3"
    values={
      Object {
        "count": 1500,
        "impact": "86.67%",
        "impactedCount": 1300,
        "isPlural": "s",
        "type": "client",
      }
    }
  />,
  "clientImpactFormatted": "86.67%",
}
`;

exports[`impactValues handles clientCount = 0 1`] = `
Object {
  "clientImpact": "-",
  "clientImpactCountFormatted": "-",
  "clientImpactDescription": "-",
  "clientImpactFormatted": "-",
}
`;

exports[`impactValues handles when incident has client impact 1`] = `
Object {
  "clientImpact": 0.4296875,
  "clientImpactCountFormatted": "55",
  "clientImpactDescription": <Memo(MemoizedFormattedMessage)
    defaultMessage={
      Array [
        Object {
          "type": 1,
          "value": "impactedCount",
        },
        Object {
          "type": 0,
          "value": " of ",
        },
        Object {
          "type": 1,
          "value": "count",
        },
        Object {
          "type": 0,
          "value": " ",
        },
        Object {
          "type": 1,
          "value": "type",
        },
        Object {
          "type": 1,
          "value": "isPlural",
        },
        Object {
          "type": 0,
          "value": " (",
        },
        Object {
          "type": 1,
          "value": "impact",
        },
        Object {
          "type": 0,
          "value": ")",
        },
      ]
    }
    id="2PBVN3"
    values={
      Object {
        "count": 128,
        "impact": "42.97%",
        "impactedCount": 55,
        "isPlural": "s",
        "type": "client",
      }
    }
  />,
  "clientImpactFormatted": "42.97%",
}
`;

exports[`impactValues handles when incident has no client impact 1`] = `
Object {
  "clientImpact": "-",
  "clientImpactCountFormatted": "-",
  "clientImpactDescription": "-",
  "clientImpactFormatted": "-",
}
`;

exports[`impactValues handles when incident has no client impact but has clinet count 1`] = `
Object {
  "clientImpact": "-",
  "clientImpactCountFormatted": "-",
  "clientImpactDescription": "-",
  "clientImpactFormatted": "-",
}
`;

exports[`impactValues handles when incident is calculating 1`] = `
Object {
  "clientImpact": null,
  "clientImpactCountFormatted": "",
  "clientImpactDescription": <Memo(MemoizedFormattedMessage)
    defaultMessage={
      Array [
        Object {
          "type": 0,
          "value": "Calculating...",
        },
      ]
    }
    id="EXlQBN"
  />,
  "clientImpactFormatted": "",
}
`;
